--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -2,6 +2,7 @@ $c_white: #fff;
 $c_black: #000;
 
 $c_dusty-gray: #9b9b9b;
+$c_silver: #c8c8c8;
 $c_mine-shaft: #333;
 $c_alabaster: #f7f7f7;
 
@@ -11,3 +12,5 @@ $c_caribbean-green: #00dbb0;
 $c_persian-green: #00b78b;
 $c_raspberry: #e50158;
 $c_rose: #ff0161;
+
+$c_highlight: $c_caribbean-green;
