--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -4,12 +4,64 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 56px;
+  padding: 0 30px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1;
+  color: $c_white;
+  background-color: $c_blue;
+  border-radius: 3px;
+  cursor: pointer;
+
+  @media #{$screen-md} {
+    height: 60px;
+    padding: 0 40px;
+    font-size: 20px;
+  }
+
+  &--reversed {
+    background-color: transparent;
+    color: $c_black;
+    border: 2px solid $c_blue;
+  }
+}
+.Secondary {
   height: 68px;
   padding: 0 32px;
   font-size: 18px;
   color: $c_black;
   background-color: $c_caribbean-green;
   border: 2px solid $c_caribbean-green;
-  border-radius: 3px;
-  cursor: pointer;
+
+  @media #{$screen-md} {
+    padding: 0 40px;
+    font-size: 22px;
+  }
+
+  &--reversed {
+    color: $c_white;
+    background-color: transparent;
+    border: 2px solid $c_caribbean-green;
+  }
+
+  &--large {
+    height: 60px;
+    font-size: 22px;
+    padding: 0 60px;
+  }
+}
+
+.Default {
+  width: 100%;
+  height: 38px;
+  padding: 0;
+  font-size: 14px;
+  color: $c_black;
+  font-weight: 600;
+  background-color: $c_white;
+
+  @media #{$screen-sm} {
+    max-width: 160px;
+  }
 }
