--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -12,4 +12,6 @@ $c_persian-green: #00b78b;
 $c_raspberry: #e50158;
 $c_rose: #ff0161;
 
-
+$c_primary-accent: $c_blue;
+$c_secondary-accent: $c_caribbean-green;
+$c_warning: $c_raspberry;
