General styles refactor

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,18 @@
-@import './base/font';
 @import './common/colors';
 @import './base/reset';
+@import './base/font';
+@import './common/media';
+@import './common/variables';
+@import './common/utils';
+
+p {
+  font-size: get($font-sizes,'small');
+
+  @media #{$screen-md} {
+    font-size: get($font-sizes,'normal');
+  }
+}
+
+ul {
+  list-style-type: square;
+}
