--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,68 +1,81 @@
 @import '../../styles/_main';
 
 .Button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 56px;
+  $_r: &;
+
   padding: 0 30px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 56px;
   color: $c_white;
   cursor: pointer;
   background-color: $c_primary-accent;
+  border: 2px solid transparent;
   border-radius: 3px;
+
+  &:hover,
+  &:active {
+    text-decoration: none;
+    background-color: $c_bluebonnet;
+  }
 
   &--reversed {
     color: $c_black;
     background-color: transparent;
-    border: 2px solid $c_primary-accent;
+    border-color: $c_primary-accent;
+
+    &:hover,
+    &:active {
+      background-color: inherit;
+    }
+  }
+
+  &--secondary {
+    color: $c_black;
+    background-color: $c_secondary-accent;
+
+    &:hover,
+    &:active {
+      background-color: $c_persian-green;
+    }
+
+    &#{$_r}--reversed {
+      color: $c_white;
+      background-color: transparent;
+      border-color: $c_secondary-accent;
+    }
+  }
+
+  &--small {
+    padding: 0 16px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 38px;
+  }
+
+  &--light {
+    color: $c_black;
+    background-color: $c_white;
+
+    &:hover,
+    &:active {
+      background-color: $c_silver;
+    }
   }
 
   @media #{$screen-md} {
-    height: 60px;
     padding: 0 40px;
     font-size: 20px;
-  }
-}
 
-.Secondary {
-  height: 68px;
-  padding: 0 32px;
-  font-size: 18px;
-  color: $c_black;
-  background-color: $c_secondary-accent;
-  border: 2px solid $c_secondary-accent;
+    &--large {
+      padding: 0 60px;
+    }
 
-  &--reversed {
-    color: $c_white;
-    background-color: transparent;
-    border: 2px solid $c_secondary-accent;
-  }
-
-  &--large {
-    height: 60px;
-    padding: 0 60px;
-    font-size: 22px;
-  }
-
-  @media #{$screen-md} {
-    padding: 0 40px;
-    font-size: 22px;
-  }
-}
-
-.Default {
-  width: 100%;
-  height: 38px;
-  padding: 0;
-  font-size: 14px;
-  font-weight: 600;
-  color: $c_black;
-  background-color: $c_white;
-
-  @media #{$screen-sm} {
-    max-width: 160px;
+    &--small {
+      padding: 0 16px;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 38px;
+    }
   }
 }
