--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,14 +1,15 @@
 $border-radius: 6px;
 
 $font-sizes: (
-  small: 16px,
-  normal: 20px,
-  big: 26px,
-  bigger: 28px,
-  large: 30px,
-  xlarge: 32px,
-  xxlarge: 40px,
-  xxxlarge: 64px,
+  t1: 64px,
+  t2: 40px,
+  t3: 36px,
+  t4: 30px,
+  t5: 28px,
+  t6: 26px,
+  big: 20px,
+  normal: 16px,
+  small: 12px,
 );
 
 $duration: 400ms;
