--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -8,6 +8,7 @@
   font-weight: 400;
   line-height: 56px;
   color: $c_white;
+  text-align: center;
   cursor: pointer;
   background-color: $c_blue;
   border: 2px solid transparent;
