Update DateCounter mobile font-size

--- a/src/components/DateCounter/style.scss
+++ b/src/components/DateCounter/style.scss
@@ -23,7 +23,7 @@ $light-font-color: $c_white;
       }
 
       &__value {
-        font-size: 55px;
+        font-size: 40px;
       }
 
       &__separator {
@@ -68,5 +68,25 @@ $light-font-color: $c_white;
     margin-top: 12px;
     font-size: 12px;
     text-transform: uppercase;
+  }
+
+  @media #{$screen-sm} {
+    &--large {
+      #{$_r} {
+        &__value {
+          font-size: 55px;
+        }
+      }
+    }
+  }
+
+  @media #{$screen-md} {
+    &--large {
+      #{$_r} {
+        &__value {
+          font-size: 65px;
+        }
+      }
+    }
   }
 }
