--- a/src/components/HeroCard/style.scss
+++ b/src/components/HeroCard/style.scss
@@ -3,6 +3,7 @@
 .Card {
   $_r: &;
 
+  width: 100%;
   max-width: 580px;
   color: $c_white;
   background-color: $c_blue;
@@ -10,6 +11,7 @@
 
   &--error {
     background-color: $c_rose;
+
     #{$_r} {
       &__header {
         background-color: $c_raspberry;
@@ -19,13 +21,13 @@
 
   &__header {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     height: 92px;
     padding: 0 50px;
     font-size: 18px;
-    color: $c_white;
     font-weight: 700;
+    color: $c_white;
     text-transform: uppercase;
     background-color: $c_bluebonnet;
     border-radius: inherit;
@@ -41,8 +43,8 @@
   }
 
   &__icon {
-    margin-right: 20px;
     width: 32px;
+    margin-right: 20px;
 
     @media #{$screen-sm} {
       margin-right: 30px;
@@ -51,26 +53,25 @@
 
   &__content {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     padding: 20px 50px 40px;
-
 
     @media #{$screen-md} {
       padding-bottom: 70px;
     }
   }
 
-  &__title, &__text {
-    color: $c_white;
+  &__title,
+  &__text {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
+    color: $c_white;
   }
 
   &__title {
     margin-bottom: 12px;
     text-transform: uppercase;
   }
-
 }
