--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -3,11 +3,13 @@
 .Button {
   $_r: &;
 
+  display: inline-block;
   padding: 0 30px;
   font-size: 18px;
   font-weight: 400;
   line-height: 56px;
   color: $c_white;
+  text-align: center;
   cursor: pointer;
   background-color: $c_blue;
   border: 2px solid transparent;
