--- a/src/components/HeroCard/style.scss
+++ b/src/components/HeroCard/style.scss
@@ -23,55 +23,86 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 92px;
-    padding: 0 50px;
+    padding: 30px 50px;
     font-size: 18px;
     font-weight: 700;
     color: $c_white;
     text-transform: uppercase;
     background-color: $c_bluebonnet;
     border-radius: inherit;
-
-    @media #{$screen-sm} {
-      font-size: 26px;
-    }
-
-    @media #{$screen-md} {
-      justify-content: flex-start;
-      font-size: 30px;
-    }
   }
 
   &__icon {
-    width: 32px;
+    width: 40px;
     margin-right: 20px;
-
-    @media #{$screen-sm} {
-      margin-right: 30px;
-    }
   }
 
   &__content {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 50px 40px;
+    padding: 20px 20px 30px;
 
-    @media #{$screen-md} {
-      padding-bottom: 70px;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p {
+      margin-bottom: 12px;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      color: $c_white;
+      text-align: center;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-bottom: 20px;
+      font-size: 14px;
+      text-transform: uppercase;
+    }
+
+    a {
+      color: $c_black;
     }
   }
 
-  &__title,
-  &__text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    color: $c_white;
+  @media #{$screen-sm} {
+    &__header {
+      font-size: 26px;
+    }
+
+    &__icon {
+      margin-right: 30px;
+    }
+
+    &__content {
+      padding: 20px 50px 40px;
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p {
+        font-size: 16px;
+        text-align: left;
+      }
+    }
   }
 
-  &__title {
-    margin-bottom: 12px;
-    text-transform: uppercase;
+  @media #{$screen-md} {
+    &__header {
+      justify-content: flex-start;
+      font-size: 30px;
+    }
   }
 }
