--- a/src/components/TestnetItem/style.scss
+++ b/src/components/TestnetItem/style.scss
@@ -11,7 +11,6 @@
   }
 
   &__content {
-    margin-bottom: 40px;
     font-size: 16px;
     line-height: 24px;
     text-align: center;
@@ -24,6 +23,7 @@
   }
 
   &__counter {
+    margin-top: 40px;
     display: flex;
     align-items: center;
     flex-direction: column;
