--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,6 @@
-@import '../common/colors';
+@import './base/reset';
+@import './common/colors';
+@import './common/media';
 
 * {
   font-family: 'Titillium Web', sans-serif;
@@ -8,6 +10,7 @@ p {
   font-size: 12px;
   color: $c_mine-shaft;
 }
+
 a {
   color: $c_bluebonnet;
 }
@@ -24,4 +27,10 @@ h5,
 h6 {
   font-weight: normal;
   color: $c_black;
+}
+
+@media #{$screen-md} {
+  p {
+    font-size: 20px;
+  }
 }
