--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -127,7 +127,9 @@ table {
   border-spacing: 0;
 }
 
-* {
+*,
+*::before,
+*::after {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
