Rename class modifier in RoleCard

--- a/src/components/RoleCard/style.scss
+++ b/src/components/RoleCard/style.scss
@@ -14,7 +14,7 @@
   background-color: $c_white;
   border-radius: $border-radius;
 
-  &--highlight {
+  &--labeled {
     &::after {
       position: absolute;
       top: 0;
