--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -5,6 +5,7 @@ $navbar-height: 60px;
 .Navbar {
   position: sticky;
   top: 0;
+  z-index: 1;
   height: $navbar-height;
   background-color: $c_black;
   transition: top 400ms ease 0s;
@@ -19,6 +20,7 @@ $navbar-height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 0;
     padding-left: 32px;
     background-color: inherit;
   }
