--- a/src/components/ModalWrapper/style.scss
+++ b/src/components/ModalWrapper/style.scss
@@ -4,6 +4,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100%;
   padding: 40px 20px;
   outline: none;
   transform: translate(-50%, -50%);
