--- a/src/components/TestnetModal/style.scss
+++ b/src/components/TestnetModal/style.scss
@@ -13,7 +13,7 @@
   }
 
   &__image {
-    width: 300px;
+    height: 200px;
   }
 
   &__container {
@@ -21,15 +21,15 @@
     text-align: center;
   }
 
-  &__title {
-    margin-bottom: 30px;
-    font-size: get($font-sizes, 't6');
-  }
-
   &__paragraph {
     margin-bottom: 40px;
     font-size: 14px;
     line-height: 21px;
+  }
+
+  &__title {
+    margin-bottom: 30px;
+    font-size: get($font-sizes, 't6');
   }
 
   &__button {
@@ -41,13 +41,13 @@
       padding: 60px 100px;
     }
 
-    &__title {
-      font-size: get($font-sizes, 't2');
-    }
-
     &__paragraph {
       font-size: 18px;
       line-height: 30px;
+    }
+
+    &__title {
+      font-size: get($font-sizes, 't2');
     }
   }
 
