Update Analytics, TestnetItem and TitleWrapper styles

--- a/src/components/Analytics/style.scss
+++ b/src/components/Analytics/style.scss
@@ -1,7 +1,10 @@
 @import '../../styles/_main';
 
 .Analytics {
+  @extend %container;
+
   position: relative;
+  width: 100%;
   background-color: $c_black;
   border-radius: $border-radius;
 
