--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -3,8 +3,10 @@ $c_black: #000;
 
 $c_dusty-gray: #9b9b9b;
 $c_silver: #cacaca;
+$c_mercury: #e2e2e2;
 $c_mine-shaft: #333;
 $c_alabaster: #f7f7f7;
+$c_blue-haze: #c4c3d9;
 
 $c_blue: #001aff;
 $c_bluebonnet: #0017e6;
