Add person icon and update Link styling and story

--- a/src/components/Link/style.scss
+++ b/src/components/Link/style.scss
@@ -1,6 +1,10 @@
 @import '../../styles/main.scss';
 
 .Link {
+  display: inline-flex;
+  align-items: center;
+  white-space: pre-wrap;
+
   &--highlighted {
     color: $c_caribbean-green;
   }
