Update MapInfo rwd styling

--- a/src/components/MapInfo/style.scss
+++ b/src/components/MapInfo/style.scss
@@ -15,7 +15,7 @@
 
     & p {
       font-size: 16px;
-      line-height: 20px;
+      line-height: 26px;
     }
 
     & a {
@@ -33,22 +33,25 @@
     display: flex;
 
     &__map {
-      height: auto;
+      height: 70vh;
       max-width: 50vw;
     }
 
     &__content {
+      margin: auto 0;
+      padding: 0 30px 0 20px;
       text-align: left;
+
+      & p,
+      & a {
+        font-size: 18px;
+        line-height: 28px;
+      }
     }
   }
 
   @media #{$screen-md} {
-    &__map {
-      height: 70vh;
-    }
-
     &__content {
-      margin: auto 0;
       padding: 0 0 0 60px;
 
       & p,
