--- a/src/components/ColumnsLayout/style.scss
+++ b/src/components/ColumnsLayout/style.scss
@@ -18,7 +18,7 @@ $smallSpacing: 20px;
 
       @media #{$screen-only-sm} {
         $smCols: 1;
-        @if $i - 1 {
+        @if $i - 1 > 0 {
           $smCols: $i - 1;
         }
 
