--- a/src/components/GoalItem/style.scss
+++ b/src/components/GoalItem/style.scss
@@ -7,6 +7,7 @@
   align-items: center;
   flex-direction: column;
   max-width: 1000px;
+  margin: 0 auto;
   padding: 40px 20px;
   text-align: center;
   border-radius: $border-radius;
