--- a/src/components/Pane/style.scss
+++ b/src/components/Pane/style.scss
@@ -4,6 +4,7 @@
   $_r: &;
 
   display: flex;
+  align-items: stretch;
   flex-direction: column;
   border: 2px solid $c_bluebonnet;
   border-radius: 3px;
