--- a/src/components/ModalWrapper/style.scss
+++ b/src/components/ModalWrapper/style.scss
@@ -20,7 +20,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba($c_black, 0.6);
     opacity: 0;
     transition: opacity $duration ease-in-out;
   }
