Update after review

--- a/src/components/Pane/style.scss
+++ b/src/components/Pane/style.scss
@@ -27,7 +27,6 @@
     justify-content: center;
     padding: 30px 10px;
     text-align: center;
-    background-color: $c_white;
     transition: background-color $duration;
   }
 
@@ -46,14 +45,12 @@
     transition: color $duration;
   }
 
-  &:hover &,
-  &:active & {
-    &__content {
-      background-color: $c_bluebonnet;
-    }
+  &:hover,
+  &:active {
+    background-color: $c_bluebonnet;
 
-    &__title,
-    &__paragraph {
+    #{$_r}__title,
+    #{$_r}__paragraph {
       color: $c_white;
     }
   }
@@ -71,9 +68,7 @@
 
     &:hover,
     &:active {
-      #{$_r}__content {
-        background-color: $c_white;
-      }
+      background-color: $c_white;
 
       #{$_r}__title {
         color: $c_blue-haze;
