--- a/src/components/ModalWrapper/style.scss
+++ b/src/components/ModalWrapper/style.scss
@@ -2,13 +2,18 @@
 
 .Modal {
   position: absolute;
-  top: 5%;
+  top: 50%;
   left: 50%;
   z-index: 2;
   width: 100%;
   padding: 40px 20px;
   outline: none;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
+
+  &__container {
+    max-height: 100vh;
+    overflow: scroll;
+  }
 
   &__content {
     background-color: $c_white;
