--- a/src/components/MapInfo/style.scss
+++ b/src/components/MapInfo/style.scss
@@ -10,7 +10,7 @@
   &__content {
     max-width: 600px;
     margin: 0 auto;
-    padding: 60px 40px 0;
+    padding: 60px 20px 100px;
     text-align: center;
 
     & p {
