Update number-leading-zero rule

--- a/src/components/Chip/style.scss
+++ b/src/components/Chip/style.scss
@@ -5,7 +5,7 @@
   align-items: center;
   font-size: 16px;
   color: $c_persian-green;
-  opacity: 0.6;
+  opacity: .6;
   transition: opacity $duration;
 
   &:hover,
