--- a/src/components/CookiesNotice/style.scss
+++ b/src/components/CookiesNotice/style.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   padding: 30px;
-  box-shadow: 0 0 20px 0 rgba($c_black, 0.1);
+  box-shadow: 0 0 20px 0 rgba($c_black, .1);
 
   &__content * {
     font-size: 18px;
