Add Cookies to BaseLayout Component and small styles fix

--- a/src/components/CookiesNotice/style.scss
+++ b/src/components/CookiesNotice/style.scss
@@ -6,6 +6,7 @@
   left: 0;
   width: 100%;
   padding: 30px;
+  background-color: $c_white;
   box-shadow: 0 0 20px 0 rgba($c_black, .1);
 
   &__content * {
