--- a/src/components/MapInfo/style.scss
+++ b/src/components/MapInfo/style.scss
@@ -33,11 +33,12 @@
     display: flex;
 
     &__map {
-      height: 70vh;
-      max-width: 50vw;
+      flex: 1 100%;
+      height: auto;
     }
 
     &__content {
+      flex: 1 100%;
       margin: auto 0;
       padding: 0 30px 0 20px;
       text-align: left;
@@ -52,7 +53,7 @@
 
   @media #{$screen-md} {
     &__content {
-      padding: 0 0 0 60px;
+      padding: 0 30px 0 60px;
 
       & p,
       & a {
