Add new colors and update global styling

--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -10,7 +10,9 @@ $c_blue-haze: #c4c3d9;
 
 $c_blue: #001aff;
 $c_bluebonnet: #0017e6;
+$c_picton-blue: #3898ec;
 $c_caribbean-green: #00dbb0;
 $c_persian-green: #00b78b;
 $c_raspberry: #e50158;
 $c_rose: #ff0161;
+$c_pippin: #ffdede;
