Add disabled state to Button

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -66,6 +66,15 @@
     }
   }
 
+  &--disabled {
+    background-color: $c_blue-haze;
+
+    &:hover,
+    &:active {
+      background-color: $c_blue-haze;
+    }
+  }
+
   @media #{$screen-sm} {
     width: auto;
   }
