--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -1,10 +1,15 @@
 %container {
-  max-width: 1200px;
+  $padding: 10px;
+
+  max-width: calc(1200px + 2 * #{$padding});
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 $padding;
 
   @media #{$screen-md} {
-    padding: 0 32px;
+    $padding: 32px;
+
+    max-width: calc(1200px + 2 * #{$padding});
+    padding: 0 $padding;
   }
 }
 
