--- a/src/components/PolicyItem/style.scss
+++ b/src/components/PolicyItem/style.scss
@@ -1,6 +1,7 @@
 @import '../../styles/_main';
 
 $title-height: 44px;
+$title-padding: 32px;
 
 .PolicyItem {
   font-size: 16px;
@@ -8,7 +9,7 @@ $title-height: 44px;
   text-align: left;
 
   &__title {
-    padding-bottom: 32px;
+    padding-bottom: $title-padding;
     font-size: 22px;
     font-weight: 700;
     line-height: $title-height;
@@ -20,9 +21,11 @@ $title-height: 44px;
 
     &__title {
       font-size: 26px;
+    }
 
+    &__content {
       &--padded {
-        padding-top: $title-height;
+        padding-top: calc(#{$title-height} + #{$title-padding});
       }
     }
   }
