Update Documents Section and Hero Section

--- a/src/pages/athens/style.scss
+++ b/src/pages/athens/style.scss
@@ -5,3 +5,11 @@
     padding-bottom: 60px;
   }
 }
+
+.ColumnsLayout--documents {
+  flex-direction: column-reverse;
+
+  @media #{$screen-md} {
+    flex-direction: row;
+  }
+}
