--- a/src/components/LayoutWrapper/style.scss
+++ b/src/components/LayoutWrapper/style.scss
@@ -5,6 +5,11 @@
     background-color: $c_alabaster;
   }
 
+  &--gradient {
+    background-color: #fff;
+    background-image: linear-gradient(90deg, #f8f8f8 50%, #fff 0);
+  }
+
   &__container {
     @extend %container;
 
