Fix images size across the components

--- a/src/components/RoleCard/style.scss
+++ b/src/components/RoleCard/style.scss
@@ -40,6 +40,7 @@
 
     #{$_r}__image {
       width: 80px;
+      height: 80px;
       margin-right: 10px;
       margin-bottom: 0;
     }
@@ -109,6 +110,7 @@
     &__icon {
       display: inline-block;
       width: 22px;
+      height: 17px;
       margin-right: 10px;
     }
 
