--- a/src/components/RoleOverview/style.scss
+++ b/src/components/RoleOverview/style.scss
@@ -69,6 +69,7 @@
 
   &__form-icon {
     width: 20px;
+    height: 20px;
     margin-right: 20px;
   }
 
@@ -121,6 +122,7 @@
     }
 
     &__image {
+      height: 320px;
       margin-bottom: -100px;
     }
 
@@ -162,7 +164,7 @@
     }
 
     &__image {
-      max-width: 400px;
+      width: 400px;
       padding: 0;
     }
 
