Fix Hero image height for IE

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -50,7 +50,7 @@ $indentation: 60px;
 
   &__image {
     width: 100%;
-    max-height: 500px;
+    height: 500px;
     padding: 0 80px 40px;
   }
 
