--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -1,12 +1,19 @@
 @import '../../styles/main.scss';
 
+$trigger-height: 50px;
+
 .Sidebar {
   position: sticky;
   top: $navbar-height;
+  z-index: 1;
   transition: top $duration ease 0s;
 
   &__wrapper {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
     height: 500px;
     overflow: scroll;
   }
@@ -15,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px 0;
+    height: $trigger-height;
     font-size: 24px;
     cursor: pointer;
     background-color: $c_alabaster;
@@ -37,7 +44,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px;
+    padding: calc(30px + #{$trigger-height}) 30px 30px;
     overflow: scroll;
     background-color: $c_alabaster;
     transform: translateY(-100%);
@@ -90,8 +97,10 @@
   @media #{$screen-sm} {
     top: 0;
     left: 0;
+    z-index: 0;
+    width: 100%;
     height: 100vh;
-    max-width: 300px;
+    max-width: 230px;
     background-color: $c_alabaster;
 
     &__wrapper {
@@ -128,6 +137,12 @@
   }
 
   @media #{$screen-md} {
+    max-width: 270px;
+
+    &__container {
+      padding-left: 0;
+    }
+
     &__heading {
       margin-bottom: 32px;
     }
