--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -105,6 +105,7 @@ $trigger-height: 50px;
     width: 100%;
     height: 100vh;
     max-width: 230px;
+    overflow: scroll;
     background-color: $c_alabaster;
 
     &__wrapper {
@@ -136,6 +137,10 @@ $trigger-height: 50px;
         padding-left: 6px;
         font-weight: 700;
         color: $c_black;
+
+        &:hover {
+          font-weight: 700;
+        }
       }
     }
   }
