--- a/src/components/LayoutWrapper/style.scss
+++ b/src/components/LayoutWrapper/style.scss
@@ -21,8 +21,7 @@
 
   @media #{$screen-sm} {
     &--gradient {
-      background-color: #fff;
-      background-image: linear-gradient(90deg, #f8f8f8 50%, #fff 0);
+      background-image: linear-gradient(90deg, $c_alabaster 50%, $c_white 0);
 
       #{$_r}__container {
         display: flex;
